# Scaler-Hacks

./: .gitignore  Dockerfile  README.md  app.py  baseline_scores.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
environment/: customer_state.py  env.py  models.py  ticket_generator.py  tools.py
environment/graders/: graders.py
scripts/: offline_baseline.py
server/: app.py
tests/: test_graders.py
