[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "customer-service-env"
version = "1.0.0"
description = "OpenEnv-compliant RL environment for customer service agents"
authors = [
    { name = "CODEVENGERS", email = "9610hemant@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.6",
    "pydantic>=2.7.4",
    "openai>=2.7.2",
    "textblob>=0.18.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:app"

[project.urls]
Homepage = "https://huggingface.co/spaces/hk2166/Customer_Service_Agent"

[tool.setuptools.packages.find]
where = ["."]
include = ["environment*"]
